--- a/style.css
+++ b/style.css
@@ -60,13 +60,15 @@ ul {
 }
 
 /* ********************************
-                SPACING
+                
 ******************************** */
 
 .d-none-mobile {
     display: none;
 }
-
+.deksrop-social {
+    display: none;
+}
 
 /* ********************************
             SPACING
@@ -74,6 +76,7 @@ ul {
 .p-5-0 {
     padding: 10px 0;
 }
+
 .gigi {
 
     margin-top: 20px;
@@ -178,6 +181,7 @@ h1 {
 
 #caps {
     text-transform: uppercase;
+    font-size: 1.6rem;
 }
 
 /* ********************************
@@ -200,8 +204,40 @@ header {
 /* tablet */
 @media screen and (min-width: 768px) {
     .d-none-mobile {
-        display: block;
+        display: inline;
     }
+
+    .tablet {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+        padding: 10px 40px;
+        margin-right: 30px;
+    }
+
+    .mobile-box-social {
+        border: 1px solid rgb(250, 250, 250);
+        border-radius: 40px;
+        padding: 15px 60px;
+        background-color: var(--color-white);
+    }
+
+    .image {
+        float: left;
+        width: 50%;
+        position: relative;
+        right: 100px;
+    }
+
+ /*    footer div:nth-of-type(2) {
+        position: relative;
+        right: -60px;
+    }
+
+    h3 {
+        position: relative;
+        right: 60px;
+    } */
 }
 
 /* dekstop */
