--- a/style.css
+++ b/style.css
@@ -58,6 +58,9 @@ ul {
 .f-wrap {
     flex-wrap: wrap;
 }
+.j-start {
+    justify-content: flex-start;
+}
 
 /* ********************************
                 
@@ -66,6 +69,7 @@ ul {
 .d-none-mobile {
     display: none;
 }
+
 .deksrop-social {
     display: none;
 }
@@ -139,6 +143,10 @@ ul li {
     position: relative;
     left: 15%;
     padding: 20px;
+}
+
+.dekstop-social {
+    display: none;
 }
 
 footer {
@@ -229,7 +237,7 @@ header {
         right: 100px;
     }
 
- /*    footer div:nth-of-type(2) {
+    /*    footer div:nth-of-type(2) {
         position: relative;
         right: -60px;
     }
@@ -245,4 +253,18 @@ header {
     .j-between {
         justify-content: space-between;
     }
+
+    .dekstop-social {
+        display: inline;
+    }
+    header {
+        justify-content: flex-start;
+    }
+    #recipe-card {
+        display: flex;
+    }
+    .dekstop{
+        display: flex;
+        flex-direction: column;
+}
 }
